--- a/src/components/headers/page.module.scss
+++ b/src/components/headers/page.module.scss
@@ -41,9 +41,8 @@
 .nav {
   display: flex;
   justify-content: center;
-  padding-top: 1rem;
   margin-top: .25rem;
-  padding-top: .75rem;
+  padding-top: .5rem;
   border-top: 1px solid #ddd;
   width: 100%;
   height: 30px;
